[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatdatalab"
version = "0.1.0"
description = "A description of your package"
readme = "README.md"
authors = [
    {name = "Eirik Lidsheim Erdal", email = "eirik.lidsheim@ru.nl"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    # List your dependencies here, for example:
    # "numpy>=1.20.0",
    # "pandas>=1.3.0",
]

#[project.urls]
#"Homepage" = "https://github.com/yourusername/my_package"
#"Bug Tracker" = "https://github.com/yourusername/my_package/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]